--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,12 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://fnob.github.io
-title: Free and Opensource Blog
-subtitle: 
-author: Erik Royall
+url: http://yoursite.com
+title: My Octopress Blog
+subtitle: A blogging framework for hackers.
+author: Your Name
 simple_search: http://google.com/search
-description: FNOB is a blog on Web and Software development
-copyright: Content is licensed under Creative Commons Attribution 3.0 Unported (CC BY 3.0)
+description:
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -28,19 +27,24 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:title/
+permalink: /blog/:year/:month/:day/:title/
 source: source
 destination: public
 plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
 markdown: rdiscount
+rdiscount:
+  extensions:
+    - autolink
+    - footnotes
+    - smart
 pygments: false # default python pygments have been replaced by pygments.rb
 
 paginate: 10          # Posts per page on the blog index
 pagination_dir: blog  # Directory base for pagination URLs eg. /blog/page/2/
 recent_posts: 5       # Posts in the sidebar Recent Posts section
-excerpt_link: "Read more &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
+excerpt_link: "Read on &rarr;"  # "Continue reading" link text at the bottom of excerpted articles
 
 titlecase: true       # Converts page and post titles to titlecase
 
@@ -59,30 +63,30 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user: erikroyall
-github_repo_count: 4
+github_user:
+github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user: erikroyall
+twitter_user:
 twitter_tweet_button: true
 
 # Google +1
-google_plus_one: true
+google_plus_one: false
 google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user: 104603462212127412447
+googleplus_user:
 googleplus_hidden: false
 
 # Pinboard
-pinboard_user: erikroyall
+pinboard_user:
 pinboard_count: 3
 
 # Delicious
-delicious_user: erikroyall
+delicious_user:
 delicious_count: 3
 
 # Disqus Comments
@@ -93,4 +97,4 @@ disqus_show_comment_count: false
 google_analytics_tracking_id:
 
 # Facebook Like
-facebook_like: true
+facebook_like: false
